[package]
name = "loaned"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Safely move values with live inner borrows."
repository = "https://github.com/tjjfvi/loaned"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[[example]]
name = "tree_building"
test = true
